--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "d3": "^5.7.0",
     "d3-scale": "^2.1.2",
     "dexie": "^2.0.4",
+    "es6-promisify": "^6.0.1",
+    "huey": "^2.0.0",
     "lodash": "^4.17.10",
     "lovefield": "^2.1.12",
     "moment": "^2.22.2",
