--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:js": "standardx",
     "lint:webext": "web-ext lint -s extension/",
     "preversion": "npm run build:prod && npm run test",
-    "start:firefox": "web-ext run -s extension/ -u 'about:addons' -u 'about:debugging'",
+    "start:firefox": "web-ext run -s extension/ -u 'about:debugging'",
     "version": "file-version-bump",
     "watch": "npm run build:watch"
   },
@@ -73,6 +73,7 @@
     "lodash": "^4.17.10",
     "lovefield": "^2.1.12",
     "moment": "^2.22.2",
+    "node-vibrant": "^3.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.3",
@@ -85,7 +86,8 @@
     "react-table": "^6.8.5",
     "react-vis": "^1.10.8",
     "snowball": "^0.3.1",
-    "tldjs": "^2.3.1"
+    "tldjs": "^2.3.1",
+    "url": "^0.11.0"
   },
   "standardx": {
     "globals": [
